--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
       "parser": "@babel/eslint-parser"
     },
     "rules": {
-      "no-unused-vars": "off"
+      "no-unused-vars": "off",
+      "vue/no-deprecated-slot-attribute": "off"
     }
   },
   "browserslist": [
